<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jasstafel"
    tools:context="ch.zhaw.jasstafel.FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >
        </LinearLayout>

        <TextView
            android:id="@+id/text_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="45sp"
            android:text="@string/base_limit"
            android:textColor="@color/red" />

        <GridLayout
            android:layout_width="450dp"
            android:layout_height="430dp"
            android:layout_gravity="top|center"
            android:columnCount="2" >

            <TextView
                android:id="@+id/points_team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:rotation="180"
                android:text="@string/points_t2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:rotation="180"
                android:text="@string/team2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_single_points2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:rotation="180"
                android:textColor="@color/white"
                android:layout_row="0"
                android:textSize="20sp"
                android:text="" />
        </GridLayout>

        <GridLayout
            android:layout_width="450dp"
            android:layout_height="430dp"
            android:layout_gravity="bottom|center"
            android:columnCount="2" >

            <TextView
                android:id="@+id/text_team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:text="@string/team1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/points_team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:text="@string/points_t1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_single_points1"                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/white"
                android:layout_row="0"
                android:textSize="20sp"
                android:text="" />
        </GridLayout>

    </FrameLayout>

</FrameLayout>
